End of section two

--- a/NZWalks/NZwalks.api/appsettings.json
+++ b/NZWalks/NZwalks.api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "NZWalks": "Server=DESKTOP-CT38TIN\\PANJUTORIALSSQL;Database=NZWalksDb;Trusted_Connection=True;Encrypt=False;"
+  }
+
 }
